docs/envoy/v1.13.0/_sources/api-v3/extensions/filters/http/header_to_metadata/v3/header_to_metadata.proto.rst.txt
.. _envoy_v3_api_file_envoy/extensions/filters/http/header_to_metadata/v3/header_to_metadata.proto:

Header-To-Metadata Filter
=========================

.. _extension_envoy.filters.http.header_to_metadata:


This extension may be referenced by the qualified name *envoy.filters.http.header_to_metadata*

.. note::
  

  This extension is intended to be robust against untrusted downstream traffic. It assumes that the upstream is trusted.


The configuration for transforming headers into metadata. This is useful
for matching load balancer subsets, logging, etc.

Header to Metadata :ref:`configuration overview <config_http_filters_header_to_metadata>`.

.. _envoy_v3_api_msg_extensions.filters.http.header_to_metadata.v3.Config:

extensions.filters.http.header_to_metadata.v3.Config
----------------------------------------------------

`[extensions.filters.http.header_to_metadata.v3.Config proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/extensions/filters/http/header_to_metadata/v3/header_to_metadata.proto#L20>`_


.. code-block:: json

  {
    "request_rules": [],
    "response_rules": []
  }

.. _envoy_v3_api_field_extensions.filters.http.header_to_metadata.v3.Config.request_rules:

request_rules
  (:ref:`extensions.filters.http.header_to_metadata.v3.Config.Rule <envoy_v3_api_msg_extensions.filters.http.header_to_metadata.v3.Config.Rule>`) The list of rules to apply to requests.
  
  
.. _envoy_v3_api_field_extensions.filters.http.header_to_metadata.v3.Config.response_rules:

response_rules
  (:ref:`extensions.filters.http.header_to_metadata.v3.Config.Rule <envoy_v3_api_msg_extensions.filters.http.header_to_metadata.v3.Config.Rule>`) The list of rules to apply to responses.
  
  
.. _envoy_v3_api_msg_extensions.filters.http.header_to_metadata.v3.Config.KeyValuePair:

extensions.filters.http.header_to_metadata.v3.Config.KeyValuePair
-----------------------------------------------------------------

`[extensions.filters.http.header_to_metadata.v3.Config.KeyValuePair proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/extensions/filters/http/header_to_metadata/v3/header_to_metadata.proto#L46>`_


.. code-block:: json

  {
    "metadata_namespace": "...",
    "key": "...",
    "value": "...",
    "type": "...",
    "encode": "..."
  }

.. _envoy_v3_api_field_extensions.filters.http.header_to_metadata.v3.Config.KeyValuePair.metadata_namespace:

metadata_namespace
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The namespace — if this is empty, the filter's namespace will be used.
  
  
.. _envoy_v3_api_field_extensions.filters.http.header_to_metadata.v3.Config.KeyValuePair.key:

key
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The key to use within the namespace.
  
  
.. _envoy_v3_api_field_extensions.filters.http.header_to_metadata.v3.Config.KeyValuePair.value:

value
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The value to pair with the given key.
  
  When used for a `on_header_present` case, if value is non-empty it'll be used
  instead of the header value. If both are empty, no metadata is added.
  
  When used for a `on_header_missing` case, a non-empty value must be provided
  otherwise no metadata is added.
  
  
.. _envoy_v3_api_field_extensions.filters.http.header_to_metadata.v3.Config.KeyValuePair.type:

type
  (:ref:`extensions.filters.http.header_to_metadata.v3.Config.ValueType <envoy_v3_api_enum_extensions.filters.http.header_to_metadata.v3.Config.ValueType>`) The value's type — defaults to string.
  
  
.. _envoy_v3_api_field_extensions.filters.http.header_to_metadata.v3.Config.KeyValuePair.encode:

encode
  (:ref:`extensions.filters.http.header_to_metadata.v3.Config.ValueEncode <envoy_v3_api_enum_extensions.filters.http.header_to_metadata.v3.Config.ValueEncode>`) How is the value encoded, default is NONE (not encoded).
  The value will be decoded accordingly before storing to metadata.
  
  


.. _envoy_v3_api_msg_extensions.filters.http.header_to_metadata.v3.Config.Rule:

extensions.filters.http.header_to_metadata.v3.Config.Rule
---------------------------------------------------------

`[extensions.filters.http.header_to_metadata.v3.Config.Rule proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/extensions/filters/http/header_to_metadata/v3/header_to_metadata.proto#L74>`_

A Rule defines what metadata to apply when a header is present or missing.

.. code-block:: json

  {
    "header": "...",
    "on_header_present": "{...}",
    "on_header_missing": "{...}",
    "remove": "..."
  }

.. _envoy_v3_api_field_extensions.filters.http.header_to_metadata.v3.Config.Rule.header:

header
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The header that triggers this rule — required.
  
  
.. _envoy_v3_api_field_extensions.filters.http.header_to_metadata.v3.Config.Rule.on_header_present:

on_header_present
  (:ref:`extensions.filters.http.header_to_metadata.v3.Config.KeyValuePair <envoy_v3_api_msg_extensions.filters.http.header_to_metadata.v3.Config.KeyValuePair>`) If the header is present, apply this metadata KeyValuePair.
  
  If the value in the KeyValuePair is non-empty, it'll be used instead
  of the header value.
  
  
.. _envoy_v3_api_field_extensions.filters.http.header_to_metadata.v3.Config.Rule.on_header_missing:

on_header_missing
  (:ref:`extensions.filters.http.header_to_metadata.v3.Config.KeyValuePair <envoy_v3_api_msg_extensions.filters.http.header_to_metadata.v3.Config.KeyValuePair>`) If the header is not present, apply this metadata KeyValuePair.
  
  The value in the KeyValuePair must be set, since it'll be used in lieu
  of the missing header value.
  
  
.. _envoy_v3_api_field_extensions.filters.http.header_to_metadata.v3.Config.Rule.remove:

remove
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Whether or not to remove the header after a rule is applied.
  
  This prevents headers from leaking.
  
  


.. _envoy_v3_api_enum_extensions.filters.http.header_to_metadata.v3.Config.ValueType:

Enum extensions.filters.http.header_to_metadata.v3.Config.ValueType
-------------------------------------------------------------------

`[extensions.filters.http.header_to_metadata.v3.Config.ValueType proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/extensions/filters/http/header_to_metadata/v3/header_to_metadata.proto#L24>`_


.. _envoy_v3_api_enum_value_extensions.filters.http.header_to_metadata.v3.Config.ValueType.STRING:

STRING
  *(DEFAULT)* ⁣
  
.. _envoy_v3_api_enum_value_extensions.filters.http.header_to_metadata.v3.Config.ValueType.NUMBER:

NUMBER
  ⁣
  
.. _envoy_v3_api_enum_value_extensions.filters.http.header_to_metadata.v3.Config.ValueType.PROTOBUF_VALUE:

PROTOBUF_VALUE
  ⁣The value is a serialized `protobuf.Value
  <https://github.com/protocolbuffers/protobuf/blob/master/src/google/protobuf/struct.proto#L62>`_.
  
  

.. _envoy_v3_api_enum_extensions.filters.http.header_to_metadata.v3.Config.ValueEncode:

Enum extensions.filters.http.header_to_metadata.v3.Config.ValueEncode
---------------------------------------------------------------------

`[extensions.filters.http.header_to_metadata.v3.Config.ValueEncode proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/extensions/filters/http/header_to_metadata/v3/header_to_metadata.proto#L35>`_

ValueEncode defines the encoding algorithm.

.. _envoy_v3_api_enum_value_extensions.filters.http.header_to_metadata.v3.Config.ValueEncode.NONE:

NONE
  *(DEFAULT)* ⁣The value is not encoded.
  
  
.. _envoy_v3_api_enum_value_extensions.filters.http.header_to_metadata.v3.Config.ValueEncode.BASE64:

BASE64
  ⁣The value is encoded in `Base64 <https://tools.ietf.org/html/rfc4648#section-4>`_.
  Note: this is mostly used for STRING and PROTOBUF_VALUE to escape the
  non-ASCII characters in the header.
  
  
